--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,22 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/LuthResearch/743999698335708-project-manager'>Luth Research Project Manager | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/TurnerTownsend/743999698335965-construction-project-manager-innovative-client-modesto-california'>Turner & Townsend Construction Project Manager - Innovative Client - Modesto, California | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/oliver/jobs/1935462'>Job Application for Project Manager (HRIS Implementation of Sage People) at OLIVER</a></h5> 
+<p><span class="badge badge-light">London, England, United Kingdom  London</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/graphcore/jobs/4494652002'>Job Application for Engineering Programme Manager at Graphcore</a></h5> 
+<p><span class="badge badge-light">Bristol, UK</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='https://bswhealth.referrals.selectminds.com/jobs/project-manager-iii-temple-36932'>Project Manager III Temple - Baylor Scott & White Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
@@ -134,7 +150,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698318353-project-manager'>CapTech Consulting Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698318353-project-manager'>CapTech Consulting Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -212,7 +228,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://rockleyphotonics.applytojob.com/apply/zkgrStuBtG/Technical-Program-Manager'>Technical Program Manager - Rockley Photonics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://rockleyphotonics.applytojob.com/apply/zkgrStuBtG/Technical-Program-Manager'>Technical Program Manager - Rockley Photonics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -240,7 +256,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/careem/jobs/4497544002'>Job Application for Senior Project Manager - Organization Performance (6 month Fixed term contract) at Careem</a></h5> 
+<h5><a href='https://boards.greenhouse.io/careem/jobs/4497544002'>Job Application for Senior Project Manager - Organization Performance (6 month Fixed term contract) at Careem</a></h5> 
 <p><span class="badge badge-light">Dubai</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -264,7 +280,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://boxercraftinc.applytojob.com/apply/rLqV16Wva5/Project-Manager'>Project Manager - Boxercraft Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://boxercraftinc.applytojob.com/apply/rLqV16Wva5/Project-Manager'>Project Manager - Boxercraft Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -300,11 +316,11 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">Budapest, Hungary  Los Angeles Brazil</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dacadoo.join.com/jobs/462130-project-manager-80-100-m-f'>Job @ dacadoo (Z?rich): Project Manager 80-100% (m/f) | JOIN</a></h5> 
+<h5><a href='https://dacadoo.join.com/jobs/462130-project-manager-80-100-m-f'>Job @ dacadoo (Z?rich): Project Manager 80-100% (m/f) | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland  Australia</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oQzkbfwE&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nuKPlMwF'>Guidewire Software, Inc. Careers - Sr Project Manager, Professional Services - 80% Travel, Remote, US</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oQzkbfwE&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nuKPlMwF'>Guidewire Software, Inc. Careers - Sr Project Manager, Professional Services - 80% Travel, Remote, US</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -366,7 +382,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jrmconstructionmanagementllc.applytojob.com/apply/3REepKwh7s/MEP-Project-Manager-Core-Shell-Ground-Up'>MEP Project Manager - Core & Shell / Ground Up - JRM Construction Management, LLC - Career Page</a></h5> 
+<h5><a href='http://jrmconstructionmanagementllc.applytojob.com/apply/3REepKwh7s/MEP-Project-Manager-Core-Shell-Ground-Up'>MEP Project Manager - Core & Shell / Ground Up - JRM Construction Management, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -374,7 +390,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/questbridge/jobs/4435914002'>Job Application for Program Manager, Student Relations at QuestBridge</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/questbridge/jobs/4435914002'>Job Application for Program Manager, Student Relations at QuestBridge</a></h5> 
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -400,7 +416,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1934341'>Job Application for Marketing Program Manager, Data Integrity and Reporting  at Sony Interactive Entertainment PlayStation</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1934341'>Job Application for Marketing Program Manager, Data Integrity and Reporting  at Sony Interactive Entertainment PlayStation</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -436,22 +452,6 @@ years of experience in structural evaluation, forming and falsework analysis,?..
 <h5><a href='https://jobs.crelate.com/portal/cannabizteam/job/57gtu43tjs45cid1fagou5ug1w'>Project Manager | Job Board</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/glovo/jobs/4460611002'>Job Application for Regional Implementation Project Manager - Customer Support at Glovo</a></h5> 
-<p><span class="badge badge-light">Barcelona</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://stantec.referrals.selectminds.com/jobs/project-manager-6994'>Project Manager - Stantec Careers</a></h5> 
-<p><span class="badge badge-light">San Francisco, California United States</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://stantec.referrals.selectminds.com/jobs/geotechnical-project-manager-6989'>Geotechnical Project Manager - Stantec Careers</a></h5> 
-<p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oDkS9fwI&__jvst=Employee&__jvsd=sep77gwC&__jvsc=Twitter&bid=npWDlMwA'>Schneider Electric NAM Careers - Project Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-27</p>
 <hr/>
 
 
