--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -52,7 +52,7 @@
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4489131002'>Job Application for iOS Engineer - Customer Solutions at Glovo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/glovo/jobs/4489131002'>Job Application for iOS Engineer - Customer Solutions at Glovo</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -311,7 +311,7 @@ Our fast-paced and entrepreneurial environment is paired with the strong?...</p>
 <p><span class="badge badge-light">West Hollywood</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://worknola.com/job/324107/nagios-monitoring-engineer'>Nagios Monitoring Engineer | WorkNOLA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://worknola.com/job/324107/nagios-monitoring-engineer'>Nagios Monitoring Engineer | WorkNOLA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-11</p>
 <hr/>
@@ -387,7 +387,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">San Francisco, CA, USA  United States</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/coupang/jobs/1857012'>Job Application for Sr. iOS Engineer (Coupang Media Group Tech) at Coupang</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1857012'>Job Application for Sr. iOS Engineer (Coupang Media Group Tech) at Coupang</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
@@ -419,7 +419,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999696669650-senior-ios-engineer'>4Catalyzer Senior iOS Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999696669650-senior-ios-engineer'>4Catalyzer Senior iOS Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
@@ -427,7 +427,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/stars-group/job/oJwgbfwq'>The Stars Group Careers - iOS Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/stars-group/job/oJwgbfwq'>The Stars Group Careers - iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Leeds, United Kingdom</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
